--- a/src/styles/base/typography.css
+++ b/src/styles/base/typography.css
@@ -6,13 +6,13 @@ h3 {
 }
 
 h1 {
-    font-size: 1.75rem;
+    font-size: var(--font-6xl);
     font-weight: 600;
     color: var(--text);
 }
 
 h2 {
-    font-size: 1.1rem;
+    font-size: var(--font-2xl);
     font-weight: 600;
     margin-bottom: var(--space-sm);
     color: var(--text-muted);
