--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -62,7 +62,7 @@ nav.hiding {
 
 .logo {
     color: var(--accent);
-    font-size: 1rem;
+    font-size: var(--font-lg);
     font-weight: bold;
     position: relative;
     transition: .3s color ease-out;
