--- a/src/styles/layout/main.css
+++ b/src/styles/layout/main.css
@@ -41,7 +41,7 @@ main>article {
 
 .recent-posts h2 {
     text-align: center;
-    font-size: 2rem;
+    font-size: var(--font-7xl);
     margin-bottom: 0;
     color: var(--text);
 }
