--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,7 @@
 @import './layout/intro.css';
 
 /* Components */
+@import './components/a11y.css';
 @import './components/navigation.css';
 @import './components/hero.css';
 @import './components/blog.css';
