fix(urls): update blog URLs to point to the new domain

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -13,7 +13,7 @@
     content="ברוכים הבאים למרחב המוקדש לאמונה בישוע המשיח. מאמרים, תובנות מהכתובים וכלים לצמיחה רוחנית." />
 
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yeshuablog.netlify.app/" />
+  <meta property="og:url" content="https://yeshuablog.me/" />
   <meta property="og:site_name" content="ישוע בלוג" />
   <meta property="og:locale" content="he_IL" />
 
@@ -22,7 +22,7 @@
   <meta property="og:description"
     content="גלו אמיתות מקראיות, את בשורת ישוע המשיח ותובנות לחיים. הצטרפו למסע של אמונה." />
 
-  <meta property="og:image" content="https://yeshuablog.netlify.app/favicon.svg" />
+  <meta property="og:image" content="https://yeshuablog.me/favicon.svg" />
 
   <!-- Matomo -->
   <!-- <script>
