fix(scripts): add defer attribute to script tags for improved loading performance

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -150,8 +150,8 @@
     </div>
   </footer>
 
-  <script src="/js/a11y.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="/js/a11y.js" defer></script>
+  <script src="/js/main.js" defer></script>
 </body>
 
 </html>
