feat(metadata): add dynamic Open Graph image support for posts

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -22,7 +22,7 @@
   <meta property="og:description"
     content="גלו אמיתות מקראיות, את בשורת ישוע המשיח ותובנות לחיים. הצטרפו למסע של אמונה." />
 
-  <meta property="og:image" content="https://yeshuablog.me/favicon.svg" />
+  <meta property="og:image" content="https://yeshuablog.me{{image}}" />
 
   <!-- Matomo -->
   <!-- <script>
