fix(metadata): update Open Graph title to use dynamic variable

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="ישוע בלוג" />
   <meta property="og:locale" content="he_IL" />
 
-  <meta property="og:title" content="ישוע בלוג - אמת, אמונה ודרך חיים" />
+  <meta property="og:title" content="{{title}}" />
 
   <meta property="og:description"
     content="גלו אמיתות מקראיות, את בשורת ישוע המשיח ותובנות לחיים. הצטרפו למסע של אמונה." />
